--- a/lab1/index.html
+++ b/lab1/index.html
@@ -39,7 +39,7 @@
     <p class="style2">Class: <span class="style3">2nd LMD computer Science</span></p>
     <p class="style2">University: <span class="style3">University of EL OUED</span></p>
     
-    <img src="https://www.bing.com/images/search?view=detailV2&ccid=VlhuG8U6&id=F45152AC5437E565782B9A94C61AF631CF1F0066&thid=OIP.VlhuG8U6vbt1XSd9BvnVeAHaHa&mediaurl=https%3a%2f%2fwww.univ-eloued.dz%2fwp-content%2fuploads%2f2024%2f03%2flogo_univ_eloued.png&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.56586e1bc53abdbb755d277d06f9d578%3frik%3dZgAfzzH2GsaUmg%26pid%3dImgRaw%26r%3d0&exph=2000&expw=2000&q=%d8%ac%d8%a7%d9%85%d8%b9%d8%a9+%d8%a7%d9%84%d9%88%d8%a7%d8%af%d9%8a&FORM=IRPRST&ck=3216A5280E32AE6B377C5EB40883CA82&selectedIndex=0&itb=1"
+    <img src="https://th.bing.com/th/id/OIP.nMYswYBIQhFS8f-kuw9pywHaHa?w=165&h=180&c=7&r=0&o=7&pid=1.7&rm=3"
       alt="Description" class="style4">
 </body>
 </html>
