--- a/lab1/index.html
+++ b/lab1/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>حاسبة المعدل التراكمي (jQuery)</h1>
+        <h1>حاسبة المعدل التراكمي</h1>
 
         <form id="gpaForm">
             <div id="courses">
