--- a/lab1/index.html
+++ b/lab1/index.html
@@ -20,7 +20,7 @@
             font-weight: bold;
             font-family: 'Cambria', serif;
             text-align: left;
-            margin: 5px 0;
+            margin: 15px 0; /* زيادة المسافة العمودية هنا */
         }
         
         /* Style 3: حجم الخط 14px، لون أسود للمعلومات */
